# WindowDetection

./: .gitignore  CMakeLists.txt  SquareDetector.cpp  SquareDetector.hpp  Tracker.cpp  Tracker.hpp  data.txt  main.cpp
